2007-10-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_index.rb: Make #outdated search only for gems
	matching the current platform.
	* lib/rubygems/commands/dependency_command.rb: Add --platform.
	* lib/rubygems/commands/outdated_command.rb: Ditto.
	* lib/rubygems/commands/specification_command.rb: Ditto.
	* lib/rubygems/commands/update_command.rb: Ditto.

2007-10-02  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/specification.rb: Custom Marshal format to reduce index
	size.
	* lib/rubygems/requirement.rb: Ditto
	* lib/rubygems/version.rb: Ditto

2007-10-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/platform.rb: Handle mswin32 on VC6.  Partial patch and
	assistance by Luis Lavena.  Handle cpu-os-version style platforms for
	command-line arguments.

2007-09-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb: Gem::Specification is now
	forward-compatible while loading.

2007-09-29  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/source_info_cache_entry.rb: Correctly handle URIs.
	* lib/rubygems/remote_fetcher.rb: ditto.
	* lib/rubygems/remote_options.rb: Add --update-sources option.  Patch
	#14246 submitted by Alan Francis.
	* lib/rubygems/config_file.rb: Add update_sources setting to control
	automatic refreshing of sources (patch #14246).  Fix bug where things
	would be overwritten in ~/.gemrc when they shouldn't.

2007-09-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems.rb: Gem.ruby now returns the full path.  Added
	Gem.prefix to make self updating work right.
	* setup.rb, pre-install.rb, post-install.rb: Replace with a small,
	simple setup script that works.
	* lib/rubygems/commands/update_command.rb: Pass rdoc, ri and prefix
	flags down to setup.rb when self updating.

2007-09-26  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/version_option.rb: Always include RUBY platform,
	allow RUBY platform as an option.